--- a/重构/index.html
+++ b/重构/index.html
@@ -37,6 +37,9 @@
                 <li>
                     <a href="#" id="nav_add" class="hide-elem"><img src="image/icon/add-b.png" title="发帖" /></a>
                 </li>
+                <!--<li>
+                    <a href="#" id="nav_share" class="hide-elem"><img src="image/icon/share-b.png" title="分享" /></a>
+                </li>-->
                 <li>
                     <a href="#" id="nav_ham">
                         <img src="image/icon/hamburger-w.png" title="导航" />
@@ -117,6 +120,53 @@
                 </div>
             </div>
         </div>
+        <!-- 历史 -->
+        <div class="section" id="sec_history">
+            <div id="slide_history" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#slide_history" data-slide-to="0" class="active"><img src="image/history/st-hover.png" title="隋唐" /></li>
+                    <li data-target="#slide_history" data-slide-to="1"><img src="image/history/song.png" title="宋代" /></li>
+                    <li data-target="#slide_history" data-slide-to="2"><img src="image/history/yuan.png" title="元代" /></li>
+                    <li data-target="#slide_history" data-slide-to="3"><img src="image/history/ming.png" title="明代" /></li>
+                    <li data-target="#slide_history" data-slide-to="4"><img src="image/history/qm.png" title="清代民国" /></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="image/history/history-1.png" />
+                        <div class="carousel-caption">
+                            目前虽没有能证明隋唐已出现皮影的确切资料，但可肯定此时距皮影的诞生已经为期不远。隋代在灯具制作方面有长足的进展。纸灯又称影灯，纸灯和活动的影灯同样是探求皮影起源的重要线索。到了唐代，出现了在皮影产生过程中扮演关键角色的灯具——马灯。皮影戏最早是为佛教宣示轮回报应并为佛法服务的。唐代寺院中的俗讲僧在超度亡灵时，用影人作为死者的灵魂再现。从宋代皮影戏的繁荣程度来考虑，期间必须有一个酝酿于发展的过程，设定汉代已出现了关节能活动的玩偶，唐代自然被学术界认为是皮影戏从出现到完善的过渡期。
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="image/history/history-2.png" />
+                        <div class="carousel-caption">
+                            宋代皮影的繁荣令人目眩，影戏至此有了明朗的记载。北宋的“瓦肆”，演出的“百戏”不可胜数，其中专有影戏演出。南宋官员仿汴京的瓦肆，在城内外修建了许多叫“瓦舍”的地方，招集伎乐，作为军中将士娱乐玩耍的地方。当时影戏的内容已经脱离了宣卷的单调模式，表演的成分大大增加了。除了历史故事，还有一些作品是纯属虚构的，影戏的戏路越来越宽了。影戏道具的材料，先是用纸来雕刻结缀，后来可能出于硬度的考虑，换成了皮革。出现了“绘革社”这样的影戏组织，和“镞影人”这样专门刻镂影人的行业。并以影戏为中心，形成了相关的“产业开发”。
+
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="image/history/history-3.png" />
+                        <div class="carousel-caption">
+                            元代创建伊始，就不断向西扩张。皮影艺人随着蒙古军队西征，皮影也一路向西传播。据载当时皮影已作为军队内部的娱乐活动。山西省孝义县旧城东1955年发现的元大德二年墓，在墓口两侧绘有纸窗人影的壁画，并写有“乐影传家，共守其职”的字样。金元影戏承袭宋代，时见遗迹。例如1980年在山西省孝义县榆树坪村发现的金正隆元年墓里，有皮影头像壁画。山西省繁峙县岩山寺文殊殿金大定七年壁画则绘有一幅儿童弄影戏图，这是金代影戏传到北方边远地区的写照。
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="image/history/history-3.png" />
+                        <div class="carousel-caption">
+                            明代是皮影的一个重要时期，这个时期内影戏完成了两个使命：一是皮影的流派相继成熟；二是皮影的对外传播加强。随着政治中心的北移，皮影在河北一带发展迅速。永乐、万历年间，由于江南、湖广、四川等地屯军边疆的原因，皮影流入云南等地，和当地的艺术形式结合，在唱腔、脸谱和美术制作上形成独特的风格。
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="image/history/history-2.png" />
+                        <div class="carousel-caption">
+                            清代和民国期间是中国影戏发展史上的第二次高峰，皮影戏到达了全国大部分的省份。清军入关后，由于满人非常喜爱看影戏，八旗王府中有专设的影戏道具，艺人常常被王公贝勒邀请到王府中表演，叫做“宫影戏”。这一时期出现另外两种班社：一是王府戏班，一是富豪家班，清代后期又产生了影戏茶馆。<br/>
+                            民国时期皮影呈衰颓之状，从事皮影表演的人减少。抗日战争中，福建漳州以皮影戏的形式宣传抗日救国，演遍漳州市，深受欢迎。1943年中共冀东特委组织苏旭、张茂兰等著名艺人，成立了新长城影社，创新剧目《玉田从军》、《光明之路》、《血泪仇》等，宣传了抗敌斗争。
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- 论坛 -->
         <div class="section" id="sec_forum">
             <div class="container">
@@ -170,14 +220,14 @@
                             </div>
                         </div>
                     </div>
-                    <img class="bg-img" src="image/forum/bg-baike.png" />
+                    <img class="bg-img-baike" src="image/forum/bg-baike.png" />
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
                         <div class="section-forum section-talk">
                             <h2>闲聊</h2>
                             <div class="talk-text"><p>“皮影到底有几种？”</p><p>112 回帖</p></div>
-                            <img class="bg-img" src="image/forum/bg-talk.png" />
+                            <img class="bg-img-talk" src="image/forum/bg-talk.png" />
                         </div>
                     </div>
                     <div class="col-sm-9">
@@ -186,7 +236,7 @@
                                 <h2>专</h2>
                                 <h2>业</h2>
                             </div>
-                            <img class="bg-img" src="image/forum/bg-profession.png" />
+                            <img class="bg-img-profession" src="image/forum/bg-profession.png" />
                         </div>
                     </div>
                 </div>
@@ -198,62 +248,34 @@
                     <div class="row">
                         <div class="col-sm-3">
                             <h2>皮影的基础认识</h2>
-                            <p>洪山区东湖公园<span class="pull-right">2015/4/13 12:00</span></p>
+                            <p>东湖公园<span class="pull-right">2015/4/13 12:00</span></p>
                             <p>
-                                <button class="btn btn-primary">参加</button>
+                                <button class="btn btn-primary" onclick="javascript: join();">参加</button>
                                 <span class="pull-right">剩余3席</span>
                             </p>
                         </div>
                         <div class="col-sm-3">
-                            <h2>皮影的基础认识</h2>
-                            <p>洪山区东湖公园<span class="pull-right">2015/4/13 12:00</span></p>
+                            <h2>皮影艺术欣赏</h2>
+                            <p>武汉理工大学<span class="pull-right">2015/4/13 14:00</span></p>
                             <p>
-                                <button class="btn btn-primary">参加</button>
-                                <span class="pull-right">剩余3席</span>
+                                <button class="btn btn-primary" onclick="javascript: join();">参加</button>
+                                <span class="pull-right">剩余224席</span>
                             </p>
                         </div>
                         <div class="col-sm-3">
-                            <h2>皮影的基础认识</h2>
-                            <p>洪山区东湖公园<span class="pull-right">2015/4/13 12:00</span></p>
+                            <h2>皮影制作过程</h2>
+                            <p>皮影制造厂<span class="pull-right">2015/4/14 12:00</span></p>
                             <p>
-                                <button class="btn btn-primary">参加</button>
-                                <span class="pull-right">剩余3席</span>
+                                <button class="btn btn-primary" onclick="javascript: join();">参加</button>
+                                <span class="pull-right">剩余12席</span>
                             </p>
                         </div>
-                        <img class="bg-img" src="image/forum/bg-activity.png" />
+                        <img class="bg-img-activity" src="image/forum/bg-activity.png" />
                     </div>
                 </div>
             </div>
         </div>
-        <!-- 历史 -->
-        <div class="section" id="sec_history">
-            <div id="slide_history" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#slide_history" data-slide-to="0" class="active"></li>
-                    <li data-target="#slide_history" data-slide-to="1"></li>
-                    <li data-target="#slide_history" data-slide-to="2"></li>
-                    <li data-target="#slide_history" data-slide-to="3"></li>
-                    <li data-target="#slide_history" data-slide-to="4"></li>
-                </ol>
-                <div class="carousel-inner" role="listbox">
-                    <div class="item active">
-                        <img src="image/history/history-1.png" />
-                    </div>
-                    <div class="item">
-                        <img src="image/history/history-2.png" />
-                    </div>
-                    <div class="item">
-                        <img src="image/history/history-3.png" />
-                    </div>
-                    <div class="item">
-                        <img src="image/history/history-4.png" />
-                    </div>
-                    <div class="item">
-                        <img src="image/history/history-5.png" />
-                    </div>
-                </div>
-            </div>
-        </div>
+    </div>
     <!-- SlideShow -->
     <div class="dragslider hide-elem" id="slideshow">
         <section class="img-dragger dragdealer img-dragger-large">
@@ -262,43 +284,32 @@
                     <div class="img-wrap">
                         <img class="main1" alt="img1" src="imgs/Pic-main-1.jpg">
                     </div>
-                    <h2>Lorem Waldy<span>Distilling design ideas and other interesting topics</span></h2>
+                    <h2>图片</h2>
 
                 </div>
                 <div class="slide" data-content="content-2">
                     <div class="img-wrap"><img class="main1" alt="img2" src="imgs/Pic-main-2.jpg"></div>
-                    <h2>Round Table <span>King Arthur's creative team techniques</span></h2>
+                    <h2>视频</h2>
 
                 </div>
                 <div class="slide" data-content="content-3">
                     <div class="img-wrap"><img class="main1" alt="img3" src="imgs/Pic-main-3.jpg"></div>
-                    <h2>Taking Sneezes <span>Nothing is out there&mdash;let's try again</span></h2>
+                    <h2>地图</h2>
 
                 </div>
                 <div class="slide" data-content="content-4">
                     <div class="img-wrap"><img class="main1" alt="img4" src="imgs/Pic-main-4.jpg"></div>
-                    <h2>Heavy Talks <span>Heated conversations in the back yard</span></h2>
+                    <h2>历史</h2>
 
                 </div>
                 <div class="slide" data-content="content-5">
                     <div class="img-wrap"><img alt="img5" src="img/5.jpg"></div>
-                    <h2>Mountain Sun <span>Crazy nature and other weather ideas</span></h2>
+                    <h2>DIY</h2>
 
                 </div>
                 <div class="slide" data-content="content-6">
                     <div class="img-wrap"><img alt="img6" src="img/6.jpg"></div>
-                    <h2>Beloved Mother <span>Decomposing fruits and burning houses</span></h2>
-
-                </div>
-                <div class="slide" data-content="content-7">
-                    <div class="img-wrap"><img alt="img7" src="img/7.jpg"></div>
-                    <h2>Kale <i>&amp;</i> Karen <span>Only kale could make her happy</span></h2>
-
-                </div>
-                <div class="slide" data-content="content-8">
-                    <div class="img-wrap"><img alt="img8" src="img/8.jpg"></div>
-                    <h2>Happiness <span>On self-sufficient homes and pets</span></h2>
-
+                    <h2>论坛</h2>
                 </div>
             </div>
         </section>
